corrected spacing in news and visual bug

--- a/src/app/_components/calendar/calendar.component.scss
+++ b/src/app/_components/calendar/calendar.component.scss
@@ -9,3 +9,7 @@ mat-tab-group {
     touch-action: pan-y !important;
   }
 }
+
+main {
+  height: calc(100vh - 56px);
+}
