--- a/src/app/_components/stock/actualites/actualites.component.scss
+++ b/src/app/_components/stock/actualites/actualites.component.scss
@@ -1,6 +1,7 @@
 a {
   color: black;
   text-decoration: none;
+  white-space: normal;
 }
 
 ::ng-deep.mat-list-item-content {
